# fantasia

./: .gitignore  README.md
contract/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
contract/programs/rentair-mint/: Cargo.toml
contract/programs/rentair-mint/src/: lib.rs
contract/tests/: skytrade-mint.ts
front-end/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
front-end/prisma/: schema.prisma
front-end/src/app/: globals.css  layout.tsx  page.tsx
front-end/src/app/(auth)/sign-in/: page.tsx
front-end/src/app/api/subreddit/: route.ts
front-end/src/app/api/subreddit/unsubscribe/: route.ts
front-end/src/app/r/[slug]/: layout.tsx  page.tsx
front-end/src/components/: Icons.tsx  Navbar.tsx  SignIn.tsx  UserAuthForm.tsx
front-end/src/components/landing/: landing.tsx
front-end/src/hooks/: use-custom-toasts.tsx
front-end/src/lib/: auth.ts
